[package]
name = "broadcast_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
futures = "0.3.31"
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
anyhow = "1.0.98"
chrono =  "0.4.41"
